--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Guilherme Marques dos Santos</h1>
-    <img src="imagem-gui.jpg" alt="foto-guilherme-marques-dos Santos" width="200px" height="250px">
-</body>
+  </head>
+  <body>
+    <h1>Índice</h1>
+    <ul>
+          <li><a href="">1.1 Quem sou eu</a></li>
+          <li><a href="">1.2 Habilidades</a></li>
+          <li><a href="">1.3 Trybe</a></li>
+    </ul>
+
+    <h2>Guilherme Marques dos Santos</h2>
+    <img
+      src="imagem-gui.jpg"
+      alt="foto-guilherme-marques-dos Santos"
+      width="200px"
+      height="250px"
+    />
+    <p>
+      Olá me chamo Guilherme, sou de Osasco,SP tenho 27 anos, atualmente estudo
+      desenvolvimento web na trybe
+    </p>
+    <h3>Habilidades</h3>
+    <ul>
+      <li>javascript</li>
+      <li>css</li>
+      <li>html</li>
+      <li>bash</li>
+      <strong><li>Pensamento critico</li></strong>
+    </ul>
+  </body>
 </html>
