--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <h1>Índice</h1>
     <ul>
-          <li><a href="">1.1 Quem sou eu</a></li>
-          <li><a href="">1.2 Habilidades</a></li>
-          <li><a href="">1.3 Trybe</a></li>
+          <li><a href="#descricao">1.1 Quem sou eu</a></li>
+          <li><a href="#habilidades">1.2 Habilidades</a></li>
+          <li><a href="#trybe">1.3 Trybe</a></li>
     </ul>
 
-    <h2>Guilherme Marques dos Santos</h2>
+    <h2 id="descricao">Guilherme Marques dos Santos</h2>
     <img
       src="imagem-gui.jpg"
       alt="foto-guilherme-marques-dos Santos"
@@ -25,7 +25,7 @@
       Olá me chamo Guilherme, sou de Osasco,SP tenho 27 anos, atualmente estudo
       desenvolvimento web na trybe
     </p>
-    <h3>Habilidades</h3>
+    <h3 id="habilidades">Habilidades</h3>
     <ul>
       <li>javascript</li>
       <li>css</li>
@@ -33,5 +33,7 @@
       <li>bash</li>
       <strong><li>Pensamento critico</li></strong>
     </ul>
+
+    <a id="trybe" href="https://www.betrybe.com/" target="_blank">trybe</a>
   </body>
 </html>
